# minecli

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
examples/: test_offset_800.rs  test_parse.rs
src/: config.rs  db.rs  error.rs  events.rs  form_field.rs  issue_form.rs  lib.rs  main.rs  theme.rs
src/app/: attachments.rs  bulk_operations.rs  data_loader.rs  data_loader.rs.broken  filters.rs  handlers.rs  helpers.rs  mod.rs  state.rs
src/app/handler_modules/: form_fields.rs  mod.rs
src/redmine/: client.rs  mod.rs  models.rs
src/ui/: forms.rs  main_screen.rs  mod.rs  status_bar.rs  widgets.rs
src/ui/popups/: attachment_manager.rs  error_dialog.rs  file_explorer.rs  image_viewer.rs  journal_helpers.rs  mod.rs
tests/: db_tests.rs
wix/: main.wxs
